<resources>
    <string name="app_name">GlotusAppFinal</string>
    <string name="checkbox">example.sunny.functioncheck.checkbox</string>
    <string name="email">example.sunny.functioncheck.email</string>
    <string name="password">example.sunny.functioncheck.password</string>
    <string name="constant">Республика Казахстан
    050026, г. Алматы, ул. Нурмакова 1/1, оф. 208
    +7 727 221 93 99, 8 800 080 0101
    www.glotus.kz</string>
    <string name="qwer">Экспедиторская расписка №</string>
    <string name="generate">Generate</string>
    <string name="expedNumber">ALA000000</string>
    <string name="date">Дата, время</string>
    <string name="dateFill">10.02.2018</string>
    <string name="marshrut">Маршрут отправки</string>
    <string name="marshFill1">нет данных</string>
    <string name="marshFill2">нет данных</string>
    <string name="tere">-</string>
    <string name="gruzootpravitel">Грузоотправитель</string>
    <string name="naimenovanie">Наименование</string>
    <string name="naimenovanieаFill">нет данных</string>
    <string name="adres">Адрес</string>
    <string name="adresFill">нет данных</string>
    <string name="contact">Телефон, контактное лицо</string>
    <string name="contactFill">тел. нет данных</string>
    <string name="gruzopoluchatel">Грузополучатель</string>
    <string name="naimenPoluch">Наименование</string>
    <string name="naimenPoluchFill">нет данных</string>
    <string name="adressPolusch">Адрес</string>
    <string name="adressPoluchFill">нет данных</string>
    <string name="contactPoluch">Телефон, контактное лицо</string>
    <string name="contactPoluchFill">тел. нет данных</string>
    <string name="platelshik">Плательщик</string>
    <string name="platelshikFill">нет данных</string>
    <string name="datagruz">Данные о грузе</string>
    <string name="naimenGruz">Наименование</string>
    <string name="naimenGruzFill">нет данных</string>
    <string name="characterGruz">Характеристика груза</string>
    <string name="characterGruzFill">нет данных</string>
    <string name="kolvoMest">Количество мест</string>
    <string name="kolvoMestFill">нет данных</string>
    <string name="upakovka">нет данных</string>
    <string name="vesObiem">Заявленный вес и объем</string>
    <string name="ves">нет данных</string>
    <string name="vesFill">кг</string>
    <string name="obiem">нет данных</string>
    <string name="obiemFill">м3</string>
    <string name="dopUslugi">Дополнительные услуги</string>
    <string name="osobOtmExp">Особые отметки экспедитора</string>
    <string name="soprDoc">Сопроводительные документы</string>
    <string name="longText">Груз принят по количеству мест, вся ответственность за достоверность указанных
                            в товаросопроводительных документах данных, а так же завнутреннее состояние груза,
                            возлагается на грузоотправителя или его уполномоченное лицо, передавшее груз к перевозке.</string>
    <string name="longText1">Экспедитор не несет ответстевенности за внутреннее содержание, если по внешним признакам отсутствуют
                            следы вскрытия (повреждения) упаковки (тары).</string>
    <string name="longText2">Грузоотправитель гарантирует, что в отправляемом нрузе отсутсвует:</string>
    <string name="longText3">опасные грузы (вне зависимости от класса опасности), наркосодержащие вещества, грузы не прошедшие
                            таможенное оформление, иные грузы, запрещенные для принятия к перевозке.</string>
    <string name="wait_button">Waiting</string>
    <string name="accepted_button">Accepted</string>
    <string name="error_button">Error</string>
    <string name="data_tb">Дата</string>
    <string name="num_tb">Номер</string>
    <string name="zakNum_tb">Номер заказа</string>
    <string name="amount_fact">Количество Факт:</string>
    <string name="ves_fact">Вес факт:</string>
    <string name="vol_fact">Объем Факт:</string>
    <string name="uparovka">Упаковка:</string>
    <string name="damaged">Груз поврежден</string>
    <string name="zakazchik">Отправитель</string>
    <string name="otpravitel">Отправитель:</string>
    <string name="cont">ООО СПЕЦЭКСПО</string>
    <string name="manager">Менеджер:</string>
    <string name="podrazdel">Подразделение:</string>
    <string name="admin">Администратор</string>
    <string name="city">Алматы</string>
    <string name="coment">Комент:</string>
    <string name="transport">Транспорт:</string>
    <string name="eticet_button">Этикетка</string>
    <string name="form_button">Форма</string>
    <string name="take_photo">Сделать фото</string>
    <string name="pathText">Path of photo:</string>
    <string name="nameText">Name of picture:</string>
    <string name="name">Name </string>
    <string name="path">Path </string>
    <string name="sop">Сопр док:</string>
    <string name="fromCity">Город откуда</string>
    <string name="toCity">Город куда</string>
    <string name="otkuda">откуда</string>
    <string name="kuda">куда</string>
    <string name="poluchatel">Получатель:</string>
    <string name="otpavitelImya">имя отправителя</string>
    <string name="poluchatelImya">имя получателя</string>
    <string name="podpis">Подпись:</string>
    <string name="kolvoMestEt">Количество мест:</string>
    <string name="kolvoField">количество мест</string>
    <string name="vesEt">Вес:</string>
    <string name="vesField">вес</string>
    <string name="obiemEt">Объем:</string>
    <string name="obiemField">объем</string>
    <string name="typeTrans">Вид транспорта:</string>
    <string name="transField">транспорт</string>
    <string name="rasp">Распечатал:</string>
    <string name="raspField">распеч.</string>
    <string name="numZakField">ном.Заказа</string>
    <string name="dateZakField">дата</string>
    <string name="mesto">Место:</string>
    <string name="mestoField">места</string>
    <string name="wifiStatus">Wifi ON</string>
    <string name="discoveryPeer">Поиск</string>
    <string name="status">Connection status</string>
    <string name="message">Message</string>
    <string name="sendBtn">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_images_md">ImagesMd</string>
</resources>