<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuperviserApp.ReceptionFiles.Camera">

    <Button
        android:id="@+id/btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_main"
        android:textColor="@android:color/white"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/btn"
        android:layout_marginTop="16dp"
        android:id="@+id/image"
        android:background="@drawable/rectangle_field"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:text="@string/nameText"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:text="@string/pathText"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/path"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</RelativeLayout>