<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SuperviserApp.WifiManagerService.WifiManagerClass">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_wifiStatus"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wifiStatus" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discoveryPeer" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/wifiPeerList"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <!--<EditText
            android:id="@+id/editText"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />-->

        <Button
            android:id="@+id/btn_sendWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Print" />
    </LinearLayout>

</LinearLayout>